--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Permanent+Marker&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Permanent+Marker&family=Rancho&display=swap');
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Lilita One", serif;
-  font-weight: 200;
+  font-family: "Rancho", serif;
   font-style: normal;
 }
 @media (max-width: 768px) {
